<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@drawable/phoneback44">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textColor="#f79d00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:text="@string/password"
        android:textColor="#f79d00"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/signup"
        android:layout_width="108dp"
        android:layout_height="56dp"
        android:background="#f79d00"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:onClick="startActivityLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/enter_password"
        android:hint="@string/set_your_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="221dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_name"
        android:hint="@string/enter_your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="@string/mobile_number"
        android:textColor="#f79d00"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/enter_your_mobile_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>