<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about_page"
    android:background="@drawable/phoneback5">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="#FFF"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="38dp"
        android:layout_height="87dp"
        android:contentDescription="@string/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="42dp"
        android:layout_height="88dp"
        android:contentDescription="@string/instagram_handle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/instagram" />

    <ImageView
        android:id="@+id/whatsapp"
        android:layout_width="48dp"
        android:layout_height="92dp"
        android:contentDescription="@string/whatapp_handle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887"
        app:srcCompat="@drawable/whatsapp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="311dp"
        android:layout_height="151dp"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textAlignment="gravity"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <ImageView
        android:id="@+id/gmail"
        android:layout_width="37dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        app:srcCompat="@drawable/gmail_icon"
        android:contentDescription="@string/gmailsend" />

</androidx.constraintlayout.widget.ConstraintLayout>